service.yml
apiVersion: v1
kind: Service
metadata:
  name: py-kube-one
  labels:
    service: py-kube-one
spec:
  selector:
    app: py-kube-one
  ports:
  - port: 3000
    targetPort: 3000
